# sulyo

./: .flake8  .gitignore  README.md  Taskfile.yml  cli  client.py  countries.json  environment.yml  l.py  leagues-all.json  pcli  pyproject.toml  t.py  zcli
app/: __init__.py  __main__.py  config.py  example-settings.toml  example-settings.yaml  settings.toml
app/commands/: __init__.py
app/commands/avatar/: __init__.py
app/commands/console/: __init__.py  base.py  dig.py  tcptraceroute.py  traceroute.py  whois.py
app/commands/cve/: __init__.py  components.py  cve.py  models.py  subscription.py
app/commands/gender/: __init__.py  predictor.py
app/commands/greeting/: __init__.py  happybd.py
app/commands/logo/: __init__.py
app/commands/music/: __init__.py  albumart.py  lyrics.py  song.py
app/commands/ontv/: leagues.json  models.py  ontv.py
app/commands/ontv/item/: competitions.py  components.py  facts.py  lineups.py  livescore.py  (+6 more)
app/commands/wiki/: __init__.py
app/core/: __init__.py  app.py  blueprint.py  cacheable.py  config.py  decorators.py  hash.py  help_command.py  match.py  models.py  output.py  request.py  text.py  time.py
app/json_rpc/: __init__.py  api.py  context.py  message.py
app/scheduler/: __init__.py
app/signal/: client.py  message.py  server.py
app/storage/: __init__.py
app/ua/: __init__.py
app/zson/: __init__.py  connection.py  context.py  models.py
app/zson_client/: __init__.py  connection.py  models.py
cache/: Song.9190d4a723b102b3df9f5c0eac4c8824cb670b9f.aac
sulyo/: __init__.py  __main__.py  config.py  example-settings.yaml
sulyo/signal/: __init__.py  client.py  message.py  server.py
sulyo/znayko/: app.py  connection.py  directives.py  models.py
sulyo/znayko/adapter/: __init__.py
sulyo/znayko/core/: config.py  models.py  storage.py
