[tool.poetry]
name = "botyo"
version = "0.1.0"
description = ""
authors = ["cacko <alex@cacko.net>"]

[tool.poetry.dependencies]
python = "^3.10"
redis = {extras = ["hiredis"], version = "^4.1.3"}
dataclasses-json = "^0.5.6"
stringcase = "^1.2.0"
toml = "^0.10.2"
rich = "^11.0.0"
validators = "^0.18.2"
requests = "^2.27.1"

[tool.poetry.dev-dependencies]
pydebug = "^1.0.3"
flake8 = "^4.0.1"
autopep8 = "^1.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
