[tool.poetry]
name = "botyo-signal"
version = "0.1.0"
description = ""
authors = ["cacko <alex@cacko.net>"]

[[tool.poetry.source]]
name = "cacko"
secondary = true
url = "https://pypi.cacko.net/simple/"

[tool.poetry.dependencies]
python = "^3.10"
dataclasses-json = "^0.5.6"
stringcase = "^1.2.0"
toml = "^0.10.2"
rich = "^11.0.0"
validators = "^0.18.2"
requests = "^2.27.1"
emoji = "^1.6.3"
thefuzz = {extras = ["speedup"], version = "^0.19.0"}
botyo = "^0.1.1"

[tool.poetry.dev-dependencies]
pydebug = "^1.0.3"
flake8 = "^4.0.1"
autopep8 = "^1.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
