[tool.poetry]
name = "sulyo"
version = "0.1.0"
description = ""
authors = ["cacko <alex@cacko.net>"]

[[tool.poetry.source]]
name = "cacko"
secondary = true
url = "https://pypi.cacko.net/simple/"

[tool.poetry.dependencies]
python = "^3.10"
dataclasses-json = "^0.5.6"
toml = "^0.10.2"
botyo-client = "^0.3.0"
Unidecode = "^1.3.3"

[tool.poetry.dev-dependencies]
pydebug = "^1.0.3"
flake8 = "^4.0.1"
autopep8 = "^1.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
